# WNBA_trades_algorithm

./: EXAMPLE_WALKTHROUGH.md  GLOSSARY.md  LYRICS.txt  README.md  brand_portability.py  cleanup_readme.py  complete_fix.py  correct_update.py  example.py  example_output.json  pyproject.toml  requirements.txt
code parts/: The Baseline Builder.py
data/: Forbes top 12 most valueable wnba teams 2025.csv  WNBA 2024 market tiers data from.txt  WNBA 2024 market tiers data.json  WNBA 2026 Market Tiers.json  WNBA 2026 market tiers data from.txt  wnba_valuation_data.csv
src/: __init__.py  cli.py
src/calculators/: __init__.py  brand_portability_calculator.py  career_baseline_calculator.py  market_adjustment_calculator.py  revenue_delta_calculator.py  team_value_lift_calculator.py
src/data_loaders/: __init__.py  csv_loader.py  json_loader.py  statista_adapter.py  wehoop_adapter.py
src/estimators/: __init__.py  merchandise_estimator.py  player_revenue_attributor.py  (+2 more)
tests/: __init__.py  test_brand_portability_calculator.py  test_brand_portability_property.py  test_career_baseline_calculator.py  test_career_baseline_property.py  test_cli_integration.py  test_csv_loader_property.py  test_data_adapters_integration.py  test_estimators.py  test_estimators_property.py  test_json_loader.py  test_market_adjustment_calculator.py  test_market_adjustment_property.py  test_result_formatter.py  test_result_formatter_property.py  test_revenue_delta_calculator.py  test_revenue_delta_property.py  test_team_value_lift_calculator.py  test_team_value_lift_property.py  test_validator.py
(+12 files in other folders)
